# hydrabadger-android

./: .gitignore  Cargo.toml  README.md  build.gradle  cargo-config.toml  create-ndk-standalone.sh  hydra.jks  local.properties
.cargo/: config.save
app/: build.gradle  fabric.properties  local.properties  proguard-rules.pro
app/debug/: output.json
gradle/wrapper/: gradle-wrapper.properties
nodejs_hydra/: README.md  firebase.json  package-lock.json
nodejs_hydra/functions/: index.js  package-lock.json
nodejs_hydra_cloudFunction/: .firebaserc
nodejs_hydra_cloudFunction/functions/: index.js
qtProj/RelayTCPServer_x64/: Whatcher  clientInitConnect  clientReciever  clientReset  clientTransmit  libQt5Core.so.5  libQt5Network.so.5  relayTCPServer
qtProj/Whatcher/: Whatcher.pro  client.cpp  client.h  main.cpp  pinger.cpp  pinger.h
qtProj/clientInitConnect/: client.cpp  clientInitConnect.pro  clientInitConnect.pro.user.c494962  clientInitConnect.pro.user.d0751cb  clientInitConnect.pro.user.db73147  clientInitConnect.pro.user.ee17058  fortuneclient.pro.user.ee17058
qtProj/clientReciever/: client.cpp  client.h  clientReciever.pro.user.c494962  clientReciever.pro.user.d0751cb  clientReciever.pro.user.db73147  clientReciever.pro.user.ee17058
qtProj/clientReset/: client.cpp  client.h  clientReset.pro  clientReset.pro.user.d0751cb  main.cpp
qtProj/clientTransmit/: client.cpp  client.h  clientTransmit.pro.user.c494962  clientTransmit.pro.user.d0751cb  clientTransmit.pro.user.db73147  clientTransmit.pro.user.ee17058  main.cpp
sample/: build.sh
src/: java_glue.rs.in  lib.rs  peer.rs
(+808 files in other folders)
